<?xml version="1.0"?>
<package>
  <name>turtle_pen_sim</name>
  <version>1.0.0</version>
  <description>The turtle_pen_sim package.</description>

  <maintainer email="kk6axq@gmail.com">Lukas Severinghaus</maintainer>

  <license>GPLv3</license>




  <author email="kk6axq@gmail.com">Lukas Severinghaus</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtle_pen_sim_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>turtle_pen_sim_msgs</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
