<?xml version="1.0"?>
<package>
  <name>turtle_pen_sim_msgs</name>
  <version>0.0.0</version>
  <description>The turtle_pen_sim_srvs package</description>

  <maintainer email="kk6axq@gmail.com">Lukas Severinghaus</maintainer>

  <license>GPLv3</license>

  <author email="kk6axq@gmail.com">Lukas Severinghaus</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
